apps/nerdd-backend/base/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nerdd-backend
  labels:
    app: nerdd-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nerdd-backend
  template:
    metadata:
      labels:
        app: nerdd-backend
    spec:
      containers:
        - name: nerdd-backend
          image: nerdd-backend
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: data
              mountPath: "/data"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: media
