apps/nerdd-backend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nerdd-backend
  labels:
    app: nerdd-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nerdd-backend
  template:
    metadata:
      labels:
        app: nerdd-backend
    spec:
      containers:
        - name: nerdd-backend
          image: ghcr.io/shirte/nerdd-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: data
              mountPath: "/data"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pvc-media
      # put this container on same host as the database if possible
      affinity:
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              labelSelector:
                matchLabels:
                  app: rethinkdb
              topologyKey: kubernetes.io/hostname
