apps/nerdd-backend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nerdd-backend
spec:
  selector:
    app: nerdd-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
