apps/nerdd-backend/base/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: nerdd-backend-stripprefix
  namespace: dev
spec:
  stripPrefix:
    prefixes:
      - /api
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nerdd-backend-ingressroute
  namespace: dev
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`dev-nerdd.univie.ac.at`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: nerdd-backend
          port: 8000
      middlewares:
        - name: nerdd-backend-stripprefix
