apps/nerdd-backend/base/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: nerdd-backend-stripprefix
  labels:
    app: nerdd-backend
spec:
  stripPrefix:
    prefixes:
      - /api
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nerdd-backend-ingressroute
  labels:
    app: nerdd-backend
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`testnerdd.local`) && (PathPrefix(`/api`) || PathPrefix(`/websocket`))
      kind: Rule
      services:
        - name: nerdd-backend
          port: 8000
      middlewares:
        - name: nerdd-backend-stripprefix
